--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,4 +1,8 @@
 {
   "name": "frontend",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "type": "module",
+  "devDependencies": {
+    "svelte": "../../node_modules/svelte"
+  }
 }
