--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@nrwl/nest": "13.4.5",
     "@nrwl/node": "13.4.5",
     "@nrwl/tao": "13.4.5",
-    "@nrwl/workspace": "13.4.5",
+    "@nrwl/workspace": "^13.4.5",
     "@nxext/svelte": "^13.1.3",
+    "@nxext/sveltekit": "^13.0.0-next.2",
+    "@sveltejs/adapter-node": "next",
+    "@sveltejs/kit": "next",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.32",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.1",
