--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
@@ -28,7 +29,7 @@
     "@nrwl/node": "13.4.5",
     "@nrwl/tao": "13.4.5",
     "@nrwl/workspace": "^13.4.5",
-    "@nxext/svelte": "^13.1.3",
+    "@nxext/svelte": "^13.3.1",
     "@nxext/sveltekit": "^13.0.0-next.2",
     "@sveltejs/adapter-node": "next",
     "@sveltejs/kit": "next",
@@ -39,6 +40,7 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
+    "c8": "^7.11.0",
     "cypress": "^9.1.0",
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
@@ -51,7 +53,8 @@
     "svelte-jester": "^1.3.2",
     "svelte-preprocess": "^4.9.8",
     "ts-jest": "27.0.5",
-    "typescript": "latest"
+    "typescript": "latest",
+    "vitest": "^0.9.3"
   },
   "packageManager": "yarn@3.1.1"
 }
